<resources>
    <string name="app_name">GBook</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_migbook">MiGBook</string>
    <string name="title_catalog">Catálogo</string>
    <string name="title_categories">Categorías</string>
    <string name="title_search">Explorar</string>
    <string name="title_my_favorites">Mis Favoritos</string>
</resources>